--- a/out.html
+++ b/out.html
@@ -13,7 +13,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
     <meta property="og:type" content="website">
-    <title>TrapClient</title>
+    <title>HydrusClient(WIP)</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto:500" rel="stylesheet">
     <link id="favicon" rel="icon" type="image/png" href="favicon-32x32.png">
 	
@@ -35,7 +35,7 @@
     </script>
 	    <script>
 function connectToServer(ip) {
-	var defaultserv = "ws://localhost:777";
+	var defaultserv = "ws://localhost:443";
 	connect(defaultserv, true);
 	console.log("connect",+ip);
 }
